--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,6 +116,12 @@ div.itemInfoContainer {
     width: 70%;
 }
 
+span.itemCartQuantity {
+    background-color: #add7af;
+    border: 2px solid #9cc29e;
+    padding: 0.2em;
+}
+
 div.itemAllReviews {
     margin: 1em auto;
 }
@@ -127,6 +133,10 @@ span.itemReviewRating {
 
 span.itemReviewRatingEmpty {
     color: #b9b9b9;
+}
+
+p.itemReviewComment {
+    padding-left: 1em;
 }
 
 div.itemAddReviewContainer h4 {
