--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,14 @@ html, body {
 
 button {
   font-family: "Helvetica";
-  font-size: 90%;
+  font-size: 75%;
+  cursor: pointer;
+  font-weight: 700;
+
+  border-radius: 2px;
+  border: none;
+  background-color: lightblue;
+  padding: 10px;
 }
 
 header,
@@ -63,10 +70,6 @@ ul#navBarLinks li a:hover {
     cursor: pointer;
 }
 
-div#navBarSearchBar button {
-    cursor: pointer;
-}
-
 div#mainContent {
     margin: 2em;
 }
@@ -115,10 +118,6 @@ div.phoneCardDescContainer {
 
 button.phoneCardViewBtn {
   width: 90%;
-  border-radius: 10px;
-  border: none;
-  background-color: lightblue;
-  padding: 5px;
 }
 
 button.phoneCardViewBtn:hover {
@@ -146,8 +145,8 @@ div.itemListingContainer {
     align-items: center;
     flex-wrap: wrap;
 
-    width: 80%;
-    box-shadow: 0px 10px 25px 0px rgba(97, 97, 105, 0.3);
+    width: 96%;
+    box-shadow: 0px 5px 10px 0px rgba(97, 97, 105, 0.3);
     padding: 2%;
     margin: 0 auto;
     background-color: white;
@@ -175,7 +174,7 @@ span.itemCartQuantity {
     */
     background-color: lightblue;
     padding: 6px;
-    border-radius: 10px;
+    border-radius: 2px;
 }
 
 div.quantityCartSection {
@@ -190,12 +189,6 @@ div.quantityCartSection p {
 }
 
 div.quantityCartSection button {
-  border-radius: 10px;
-  border: none;
-  background-color: lightblue;
-  /*height: 70%;*/
-  padding: 7px;
-
   align-self: center;
 }
 
@@ -204,7 +197,7 @@ div.itemAllReviews {
 }
 
 div.itemReview {
-  box-shadow: 0px 5px 5px 0px rgba(97, 97, 105, 0.3);
+  box-shadow: 0px 5px 10px 0px rgba(97, 97, 105, 0.3);
   border-top: none;
   background-color: white;
   padding: 1%;
@@ -246,5 +239,14 @@ div.itemAddReviewContainer h4 {
 }
 
 div.itemAddReviewRatingContainer {
+    display: flex;
     margin: 0.5em auto;
+}
+
+div.itemAddReviewRatingContainer button {
+    margin-left: auto;
+}
+
+div.itemAddReviewContainer #itemAddReviewComment {
+  width: 100%;
 }
