implemented saving last viewed item

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -51,6 +51,7 @@
         </div>
         <script>
             var state = "<%= state %>";
+            var mainPageData = <%- JSON.stringify(mainPageData) %>;
         </script>
         <script src="js/main.js"></script>
         <script src="js/search.js"></script>
