--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -48,18 +48,14 @@
         </header>
         <div id="checkoutContent">
             <h2> Checkout </h2>
-            <div class="product-box">
-                <label>Phone Name</label>
-                <label>$</label>
-                <input type="number" value="1"/>
-                <button>Remove</button>
-            </div>
-            <div class="product-box">
-                <label>Phone Name</label>
-                <label>$</label>
-                <input type="number" value="1"/>
-                <button>Remove</button>
-            </div>
+            <% for(var i=0; i < cart.length; i++) { %>
+                <div class="product-box">
+                    <p><%= cart[i].phone.title %></p>
+                    <p> $<%= cart[i].phone.price %></p>
+                    <input type="number" value="<%= cart[i].phone.quantity %>"/>
+                    <button>Remove</button>
+                </div>    
+            <% } %>
             <div class="footer">
                 <label>Total price: $</label>
                 <button>Confirm</button>
