Login: Basic login page done in frontend

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -16,7 +16,7 @@
                         <li><a>Home</a></li>
                         <li><a href="checkout">Checkout</a></li>
                         <% if (!loggedIn) { %>
-                            <li><a href="#">Sign In</a></li>
+                            <li><a href="signin">Sign In</a></li>
                         <% } else { %>
                             <li><a href="#">Profile</a></li>
                             <li><a href="#">Sign Out</a></li>
