empty cart handling

--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -63,6 +63,9 @@
                 <button>Back</button>
             </div>
             <% } %>
+            <% else{ %>
+                <h2>Nothing in cart</h2>
+            <% } %>
         </div>
         </div>
         <script>
