--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -62,8 +62,7 @@
                 <button>Confirm</button>
                 <button>Back</button>
             </div>
-            <% } %>
-            <% else{ %>
+            <% } else{ %>
                 <h2>Nothing in cart</h2>
             <% } %>
         </div>
