--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -37,19 +37,23 @@
     <h1 class="phoneListingHeading">Sign In</h1>
 
     <div class="login-box">
+      <p id="incorrect-login-text">&nbsp;</p>
       <div class="login-input-field">
         Email:
-        <input type="text" />
+        <input type="text" value="" />
       </div>
       <div class="login-input-field">
         Password:
-        <input type="password" />
+        <input type="password" value="" />
       </div>
 
       <div class="login-buttons">
         <button id="cancel-button">Cancel</button>
         <button id="signin-button">Sign In</button>
       </div>
+
+      <p>Click here to reset your password.</p>
+      <p>Don't have an account yet? Sign up.</p>
     </div>
 
     <script>
