--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -58,6 +58,7 @@
 
     <script>
       var state = "<%= state %>";
+      var loggedIn = "<%= loggedIn %>";
     </script>
     <script src="js/main.js"></script>
     <script src="js/signin.js"></script>
