--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -60,6 +60,7 @@
       var state = "<%= state %>";
       var loggedIn = "<%= loggedIn %>";
     </script>
+    <script src="js/shared.js"></script>
     <script src="js/main.js"></script>
     <script src="js/signin.js"></script>
   </body>
