--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 	</head>
     <body>
-        <header>
+				<header>
             <div id="navBarMenu">
                 <div id="navBarTitle">
                     OldPhoneDeals
@@ -16,36 +16,23 @@
                         <li><a href="/">Home</a></li>
                         <li><a>Checkout</a></li>
                         <% if (!loggedIn) { %>
-                            <li><a href="#">Sign In</a></li>
+                            <li><a href="signin">Sign In</a></li>
                         <% } else { %>
                             <li><a href="#">Profile</a></li>
-                            <li><a href="#">Sign Out</a></li>
+                            <li id="sign-out-button"><a>Sign Out</a></li>
                         <% } %>
                     </ul>
                 </nav>
             </div>
             <div id="navBarSearchItems">
-                <div id="navBarSearchStateItems">
-                    <% if (state == "search") { %>
-                    <div id="searchBrandFilterContainer">
-                        <select id="searchBrandFilter">
-                        </select>
-                    </div>
-
-                    <!-- TODO change the max to highest price and add value = max -->
-                    <div id="searchPriceFilterContainer">
-                        $min
-                        <input id="searchPriceFilter" type="range" min="0" max="100">
-                        $value
-                    </div>
-                    <% } %>
-                </div>
+                <div id="navBarSearchStateItems"></div>
                 <div id="navBarSearchBar">
                     <input id="searchBar" type="search">
                     <button id="navBarSearchBtn">Search</button>
                 </div>
             </div>
         </header>
+
         <div id="checkoutContent">
             <h2> Checkout </h2>
             <% for(var i=0; i < cart.length; i++) { %>
@@ -66,7 +53,9 @@
         <script>
             var state = "<%= state %>";
         </script>
+				<script src="js/shared.js"></script>
         <script src="js/main.js"></script>
         <script src="js/search.js"></script>
+				<script src="js/signout.js"></script>
     </body>
 </html>
