Login: Redirect page on sign in and sign out

--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -20,7 +20,7 @@
                   <li><a>Sign In</a></li>
               <% } else { %>
                   <li><a href="#">Profile</a></li>
-                  <li><a href="#">Sign Out</a></li>
+                  <li><a>Sign Out</a></li>
               <% } %>
           </ul>
         </nav>
@@ -59,9 +59,10 @@
     <script>
       var state = "<%= state %>";
       var loggedIn = "<%= loggedIn %>";
-    </script>
-    <script src="js/shared.js"></script>
+    </script>    
     <script src="js/main.js"></script>
+    <script src="js/shared.js"></script>
     <script src="js/signin.js"></script>
+    <script src="js/signout.js"></script>
   </body>
 </html>
