Register: Register form made in frontend, can toggle between the two

--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -38,6 +38,7 @@
         </div>
         <script>
             var state = "<%= state %>";
+						var loggedIn = "<%= loggedIn %>";
             var mainPageData = <%- JSON.stringify(mainPageData) %>;
         </script>
 				<script src="js/shared.js"></script>
