--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -17,10 +17,10 @@
               <li><a href="/">Home</a></li>
               <li><a href="checkout">Checkout</a></li>
               <% if (!loggedIn) { %>
-                  <li><a>Sign In</a></li>
+                <li><a>Sign In</a></li>
               <% } else { %>
-                  <li><a href="#">Profile</a></li>
-                  <li><a>Sign Out</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a>Sign Out</a></li>
               <% } %>
           </ul>
         </nav>
@@ -34,10 +34,26 @@
       </div>
     </header>
 
-    <h1 class="phoneListingHeading">Sign In</h1>
+    <% if (loginOrRegister === "login") { %>
+      <h1 class="phoneListingHeading">Sign In</h1>
+    <% } else { %>
+      <h1 class="phoneListingHeading">Sign Up</h1>
+    <% } %>
 
     <div class="login-box">
       <p id="incorrect-login-text">&nbsp;</p>
+
+      <% if (loginOrRegister === "register") { %>
+        <div class="login-input-field">
+          First name:
+          <input type="text" value="" />
+        </div>
+        <div class="login-input-field">
+          Last name:
+          <input type="text" value="" />
+        </div>
+      <% } %>
+
       <div class="login-input-field">
         Email:
         <input type="text" value="" />
@@ -49,17 +65,27 @@
 
       <div class="login-buttons">
         <button id="cancel-button">Cancel</button>
-        <button id="signin-button">Sign In</button>
+        <% if (loginOrRegister === "login") { %>
+          <button id="signin-button">Sign In</button>
+        <% } else { %>
+          <button id="signup-button">Sign Up</button>
+        <% } %>
       </div>
 
-      <p>Click here to reset your password.</p>
-      <p>Don't have an account yet? Sign up.</p>
+      <% if (loginOrRegister === "login") { %>
+        <p>Click <a>here</a> to reset your password.</p>
+        <p>Don't have an account yet? <a class="toggle-login-btn">Sign up</a></p>
+      <% } else { %>
+        <p>Already have an account? <a class="toggle-login-btn">Sign in</a></p>
+      <% } %>
     </div>
 
     <script>
       var state = "<%= state %>";
       var loggedIn = "<%= loggedIn %>";
-    </script>    
+      var mainPageData = <%- JSON.stringify(mainPageData) %>;
+      var loginOrRegister = "<%= loginOrRegister %>";
+    </script>
     <script src="js/main.js"></script>
     <script src="js/shared.js"></script>
     <script src="js/signin.js"></script>
