--- a/app/views/main.ejs
+++ b/app/views/main.ejs
@@ -8,30 +8,30 @@
 	</head>
     <body>
         <header>
-            <div id="navBarMenu">
-                <div id="navBarTitle">
-                    OldPhoneDeals
-                </div>
-                <nav>
-                    <ul id="navBarLinks">
-                        <li><a>Home</a></li>
-                        <li><a href="checkout">Checkout</a></li>
-                        <% if (!loggedIn) { %>
-                            <li><a href="signin">Sign In</a></li>
-                        <% } else { %>
-                            <li><a href="#">Profile</a></li>
-                            <li id="sign-out-button"><a>Sign Out</a></li>
-                        <% } %>
-                    </ul>
-                </nav>
+          <div id="navBarMenu">
+            <div id="navBarTitle">
+                OldPhoneDeals
             </div>
-            <div id="navBarSearchItems">
-                <div id="navBarSearchStateItems"></div>
-                <div id="navBarSearchBar">
-                    <input id="searchBar" type="search">
-                    <button id="navBarSearchBtn">Search</button>
-                </div>
+            <nav>
+              <ul id="navBarLinks">
+                <li><a>Home</a></li>
+                <li><a href="checkout">Checkout</a></li>
+                <% if (!loggedIn) { %>
+                    <li><a href="signin">Sign In</a></li>
+                <% } else { %>
+                    <li><a href="profile">Profile</a></li>
+                    <li id="sign-out-button"><a>Sign Out</a></li>
+                <% } %>
+              </ul>
+            </nav>
+          </div>
+          <div id="navBarSearchItems">
+            <div id="navBarSearchStateItems"></div>
+            <div id="navBarSearchBar">
+              <input id="searchBar" type="search">
+              <button id="navBarSearchBtn">Search</button>
             </div>
+          </div>
         </header>
 
         <div id="mainContent">
