Profile: Can update profile

--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -37,9 +37,29 @@
 
     <h1 class="phoneListingHeading">Profile</h1>
     <div class="profile-box">
-      <p class="profile-field">First Name: </p>
-      <p class="profile-field">Last Name: </p>
-      <p class="profile-field">Email: </p>
+      <p id="incorrect-login-text">&nbsp;</p>
+
+      <table id="profile-info-table">
+        <tr>
+          <td>
+            First Name:
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Last Name:
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Email:
+          </td>
+        </tr>
+      </table>
+
+      <div class="login-buttons">
+        <button id="edit-profile-btn">Edit Profile</button>
+      </div>
     </div>
 
     <script>
