--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,11 +1,25 @@
 .profile-box {
-  width: 90%;
+  width: 80%;
 
   margin-left: auto;
   margin-right: auto;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+
+  background-color: white;
+  box-shadow: 0px 5px 10px 0px rgba(97, 97, 105, 0.3);
+  padding: 2%;
+}
+
+
+#profile-info-table {
+  width: 50%;
+}
+
+
+#profile-info-table td {
+  padding: 1%;
 }
