User Page: Added listings and comment buttons

--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -80,6 +80,8 @@
       <div class="profile-buttons">
         <button id="edit-profile-btn">Edit Profile</button>
         <button id="change-password-btn">Change Password</button>
+        <button id="manage-listings-btn">Manage Listings</button>
+        <button id="view-comments-btn">View Comments</button>
       </div>
     </div>
 
