--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -77,12 +77,58 @@
         </tr>
       </table>
 
+      <table id="manage-listings-table">
+        <tr>
+          <td>
+            Title:
+          </td>
+          <td>
+            <input type="text" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Brand:
+          </td>
+          <td>
+            <input type="text" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Stock:
+          </td>
+          <td>
+            <input type="number" min="1" step="1" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Price:
+          </td>
+          <td>
+            <input type="number" min="0" step="0.01" />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Image:
+          </td>
+          <td>
+            <input type="file" />
+          </td>
+        </tr>
+      </table>
+
       <div class="profile-buttons">
         <button id="edit-profile-btn">Edit Profile</button>
         <button id="change-password-btn">Change Password</button>
         <button id="manage-listings-btn">Manage Listings</button>
         <button id="view-comments-btn">View Comments</button>
       </div>
+    </div>
+
+    <div id="my-listings">
     </div>
 
     <script>
