--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,5 +1,6 @@
 .profile-box {
   width: 80%;
+  height: 60%;
 
   margin-left: auto;
   margin-right: auto;
@@ -31,8 +32,14 @@
 }
 
 
+#manage-listings-table {
+  position: absolute;
+  visibility: hidden;
+}
+
+
 .profile-buttons {
-  margin-top: 2%;
+  margin-top: 10%;
   width: 50%;
   display: flex;
 }
@@ -40,4 +47,31 @@
 
 .profile-buttons button {
   margin: 1%;
+}
+
+
+.single-listing {
+  width: 80%;
+  height: 60%;
+
+  margin-bottom: 1%;
+  margin-left: auto;
+  margin-right: auto;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  background-color: white;
+  box-shadow: 0px 5px 10px 0px rgba(97, 97, 105, 0.3);
+  padding: 2%;
+}
+
+.single-listing table {
+  width: 60%;
+}
+
+.single-listing table tr td {
+  text-align: center;
 }
