User Page: Can view comments

--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -37,6 +37,10 @@
     </header>
 
     <h1 class="phoneListingHeading">Profile</h1>
+
+    <div class="comments-box">
+    </div>
+
     <div class="profile-box">
       <p id="top-message-text">&nbsp;</p>
 
