User Page: Sign out button on user page

--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -129,6 +129,7 @@
         <button id="change-password-btn">Change Password</button>
         <button id="manage-listings-btn">Manage Listings</button>
         <button id="view-comments-btn">View Comments</button>
+        <button id="sign-out-btn">Sign Out</button>
       </div>
     </div>
 
