changed the server to use sessions instead of app.locals. fixed js link order

--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -61,6 +61,7 @@
       var mainPageData = <%- JSON.stringify(mainPageData) %>;
       var currentUser = "<%= currentUser %>";
     </script>
+    <script src="js/search.js"></script>
     <script src="js/main.js"></script>
     <script src="js/shared.js"></script>
     <script src="js/signin.js"></script>
