--- a/app/views/user.ejs
+++ b/app/views/user.ejs
@@ -91,6 +91,7 @@
       var mainPageData = <%- JSON.stringify(mainPageData) %>;
       var currentUser = "<%= currentUser %>";
     </script>
+    <script src="js/search.js"></script>
     <script src="js/main.js"></script>
     <script src="js/shared.js"></script>
     <script src="js/signout.js"></script>
