--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
 
     font-family: "Helvetica";
-    background-color: ghostwhite;
+    background-color: aliceblue;
 }
 
 button {
