--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -36,13 +36,12 @@
         </div>
         </div>
         <script>
-            var state = "<%= state %>";
             var cart = <%- JSON.stringify(cart) %>;
         </script>
-				<script src="js/shared.js"></script>
+				<!-- <script src="js/shared.js"></script>
         <script src="js/main.js"></script>
         <script src="js/search.js"></script>
-				<script src="js/signout.js"></script>
+				<script src="js/signout.js"></script> -->
         <script src="js/checkout.js"></script>
     </body>
 </html>
