fixed all navbars

--- a/app/views/checkout.ejs
+++ b/app/views/checkout.ejs
@@ -13,7 +13,9 @@
 							OldPhoneDeals
 					</div>
 					<nav>
-						
+                        <ul id="navBarLinks">
+                            <li><a href="/">Home</a></li>
+                        </ul>	
 					</nav>
 				</div>
 			</header>
