--- a/app/views/signin.ejs
+++ b/app/views/signin.ejs
@@ -14,23 +14,9 @@
         </div>
         <nav>
           <ul id="navBarLinks">
-            <li><a>Home</a></li>
-            <li><a href="checkout">Checkout</a></li>
-            <% if (!loggedIn) { %>
-                <li><a>Sign In</a></li>
-            <% } else { %>
-                <li><a href="profile">Profile</a></li>
-                <li id="sign-out-button"><a>Sign Out</a></li>
-            <% } %>
+            <li><a href="/">Home</a></li>
           </ul>
         </nav>
-      </div>
-      <div id="navBarSearchItems">
-        <div id="navBarSearchStateItems"></div>
-        <div id="navBarSearchBar">
-          <input id="searchBar" type="search">
-          <button id="navBarSearchBtn">Search</button>
-        </div>
       </div>
     </header>
 
